HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractEntryNonBitcopy/Source/Main.uv
//! Rejected contract specimen for @entry capturing a non-bitcopy value.

public procedure contractEntryNonBitcopyReference(value: unique string@Managed) -> bool
|: => @entry(value) == @entry(value)
{
    return true
}
